name:                aoc
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/lunky/aoc#readme
license:             BSD3
license-file:        LICENSE
author:              Quinn Wilson
maintainer:          Quinn.Wilson@midworld.org
copyright:           non
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/lunky/aoc#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9,
                       Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17,
                       Day18
  build-depends:       base >= 4.7 && < 5
                     , text
                     , vector
                     , containers
                     , parsec
                     , directory
                     , primitive
  default-language:    Haskell2010

executable aoc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Main
  build-depends:       base
                      ,text
                      ,aoc
                     , directory
  default-language:    Haskell2010
  
test-suite aoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , aoc
                     , text
                     , vector
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:     Day1Spec,  Day2Spec,  Day3Spec,  Day4Spec,  Day5Spec,
                     Day6Spec,  Day7Spec,  Day8Spec,  Day9Spec,  Day10Spec,
                     Day11Spec, Day12Spec, Day13Spec, Day14Spec, Day15Spec
                     Day16Spec, Day17Spec, Day18Spec

source-repository head
  type:     git
  location: https://github.com/lunky/aoc
